# open-architect

./: .env.example  .gitignore  README.md  chat_interface.py  constants.py  create_backlog_tickets_for_all.py  diff.json  diff_generator.py  gh_helper.py  init_connections.py  language_models.py  mistral_dspy.py  models.py  oa  oa_cli.py  pyproject.toml  requirements.txt  start.py  start_architecting.py  start_coding.py  start_intern.py  test_gh_helper.py  test_trello_helper.py  trello_helper.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: check_code.yaml
architect/: main.py
dev/: .gitignore  READMN.md  requirements.txt
dev/agent_dev/: models.py
dev/agent_dev/architect/: __init__.py  lab_architect.ipynb  run_st_architect.py
dev/agent_dev/intern/: __init__.py  lab_diff_generator.ipynb
dev/agent_dev/reviewer/: __init__.py  lab_code_review_generator.ipynb
dev/data/: get_data_utils.ipynb
helpers/: gh_helper.py  trello_helper.py
intern/: __init__.py  main.py  processors.py  utils.py
intern/agents/: diff_generator.py
reviewer/: __init__.py  main.py  processors.py
reviewer/agents/: code_review_generator.py
src/: chat_interface.py  constants.py  language_models.py  models.py
src/agents/architect/: __init__.py
src/helpers/: board.py  github.py  trello.py
src/lib/: mistral_chat_completion.py  mistral_dspy.py  ported_clients.py  ported_exceptions.py  terminal.py
src/models/: my_model.py
src/scripts/: start_coding.py
tests/: code_generator.test.py
tst/: test_gh_helper.py  test_trello_helper.py
(+12 files in other folders)
