[tool.poetry]
name = "open-architect"
version = "0.0.2"

description = "Your automated SWE fleet to get your tickets from the Backlog to Prod!"

authors = [
  "Aiswarya Sankar <aiswarya.s@berkeley.edu>",
  "Axel Peytavin <peytavin@stanford.edu>",
  "Pierre Collignon <collignonpie@gmail.com>",
  "Yuma Tanaka <>"
]

license = "GPL-3.0+"

readme = "README.md"

repository = "https://github.com/OpenArchitectAI/open-architect"

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"